# websitefun

./: README.md  main.py  pyproject.toml
static/: counter.js  digit.js  primitives.js  styles.css  wordfun.js
templates/: base.html  counter.html  digit.html  index.html  item.html  pixi.html  wordfun.html
