[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Wouter Roosendaal <wouterroosendaal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
